# dr_gen

./: .gitignore  .mypy_errors_after_tools.jsonl  .mypy_errors_after_typing.jsonl  .mypy_errors_final.jsonl  .mypy_errors_round2_baseline.jsonl  .mypy_errors_round2_final.jsonl  CLAUDE.md  README.md  analyze_import_graph.sh  check_types.sh  compare_typing_results.sh  experiment_analysis_refactor_agent_prompt.md  experiment_analysis_refactor_plan.md  lint_fixes_todo.md  measure_typing_baseline.sh  phase1_infer_types_plan.md  phase2_monkeytype_plan.md  plotting_simplification_plan.md  pyproject.toml  round2_experiment_plan.md  round2_experiment_script.sh  round3_monkeytype_plan.md  setup_monkeytype_trace.sh  typing_experiment_enhanced.sh  typing_experiment_helpers.sh
configs/: analyze.yaml  config.yaml
configs/data/: cifar10_pycil.yaml
configs/paths/: cluster.yaml  mac.yaml
docs/: agent-experiment-prompt.md  analysis_system_overview.md  automated_typing_experiment_plan.md  automated_typing_experiment_results.md  automated_typing_tools_research.md  autotyping-reference.md  infer-types-reference.md  monkeytype_reference.md  mypy-reference.md  mypy_parallel_fix_plan.md  mypy_parallel_fix_retrospective.md  phase1_results.md  pydantic-reference.md  remaining_error_analysis.md  round1_experiment_results.md  round2_experiment_results.md  round3_experiment_results.md  typing-experiment-status.md
docs/completed-plans/: experiment_analysis_refactor_plan.md
docs/completed_experiments/experiment_archive_analysis/: plan.md  results.md
docs/completed_experiments/infer_types_phase1/: plan.md  results.md
docs/completed_experiments/monkeytype_rounds/: round2_plan.md  round2_results.md  round3_plan.md  round3_results.md
docs/completed_experiments/mypy_parallel_fix/: plan.md  retrospective.md
docs/completed_experiments/typing_tools_comparison/: plan.md  results.md  round1_results.md
docs/superseded_plans/: phase2_monkeytype_plan.md  remaining_error_analysis.md
examples/: analyze_experiments.py
notebooks/: backup_nb.py  calc_metrics.ipynb  explore_image_data.ipynb  explore_model.ipynb  integrated_plotting_pipeline.py  integrated_plotting_pipeline_pure.py  plot_util_examples.ipynb  plotting_fxns.py  plotting_nb.py  test_pipeline.py
old_rye_files/: pyproject.toml
sbatch_archive/: pretrain_smooth.sbatch  pretrain_smooth_1.sbatch  pretrain_smooth_2.sbatch  pretrain_smooth_3.sbatch  pretrain_smooth_4.sbatch  pretrain_smooth_5.sbatch  pretrain_smooth_6.sbatch  pt_run_11.sbatch  pt_run_13.sbatch  pt_run_14.sbatch  pt_run_2.sbatch  pt_run_5.sbatch  pt_run_7.sbatch  scratch_smooth.sbatch  scratch_smooth_1.sbatch  scratch_smooth_2.sbatch  scratch_smooth_3.sbatch  scratch_smooth_4.sbatch  scratch_smooth_5.sbatch  scratch_smooth_6.sbatch
sbatch_archive/resnetstrikes_t0/: pt_run_1.sbatch  pt_run_10.sbatch  pt_run_12.sbatch  pt_run_3.sbatch  pt_run_6.sbatch  pt_run_8.sbatch  pt_run_9.sbatch
scripts/: __init__.py  analyze.py  group_results.py  parallel_runs.py  pkl_to_json.py  plot_hpm_data.py  run_log_paser.py  script_template.py  template_scripts.py  test_eval.py  test_eval_sweep.py  train.py
scripts/conf/: config.yaml
scripts/conf/data/: cifar10_pycil.yaml
scripts/conf/paths/: mac.yaml
scripts/conf/transform/: cifar10_train_pycil.yaml  cifar10_val_pycil.yaml
scripts/typing_exps/: apply_typing_tool.sh  run_typing_experiment.sh
slurm/: parallel_train.py  seed_sweep.sbatch  seed_sweep_pretrained.batch  seed_sweep_pretrained.sbatch
src/dr_gen/: __init__.py  constants.py  data.py  schemas.py
src/dr_gen/analyze/: __init__.py  bootstrapping.py  common_plots.py  database.py  dataframes.py  experiment_db.py  filtering.py  grouped_runs.py  grouping.py  histogram_plotting.py  ks_stats.py  log_file_data.py  metric_curves.py  metrics.py  models.py  parsers.py  parsing.py  plot_examples.py  plot_utils.py  plots.py  result_parsing.py  result_plotting.py  run_data.py  run_group.py  run_log_config.py  schemas.py  stats.py  visualization.py
src/dr_gen/data/: load_data.py  viz.py
src/dr_gen/train/: evaluate.py  loops.py  model.py
src/dr_gen/utils/: data.py  display.py  evaluate.py  histogram_plotting.py  ks_stats.py  metrics.py  model.py  plot_utils.py  result_parsing.py  result_plotting.py  run.py  train_eval.py  utils.py  viz.py
tests/: test_config.py  test_data.py  test_evaluate.py  test_ks_stats.py  test_metrics.py  test_model.py  test_run.py  test_template.py  test_train_eval.py  test_train_evaluate.py
tests/analyze/: test_dataframes.py  test_experiment_db.py  test_grouping.py  test_ks_stats.py  test_log_file_data.py  test_metric_curves.py  test_metrics.py  test_models.py  test_parsers.py  test_result_plotting.py  test_run_log_config.py
tests/data/: test_load_data.py
tests/train/: test_evaluate.py  test_loops.py  test_model.py
tests/utils/: test_metrics.py  test_run.py  test_utils.py
