[project]
name = "dr-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
requires-python = ">=3.12.5"
dependencies = [
    "hydra-core==1.3",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.3.5",
    "jupyterlab-vim>=4.1.4",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]
