[project]
name = "dr-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
requires-python = ">=3.12.5"
dependencies = [
    "dr-util",
    "hydra-core==1.3",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "prettytable>=3.15.1",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.3.5",
    "jupyterlab-vim>=4.1.4",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]

[tool.uv.sources]
dr-util = { git = "https://github.com/drothermel/dr_util" }
